@@ -1,3 +1,15 @@
+Sun Jun  2 22:52:23 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>
+
+	[Bug 1208]
+        * ace/README: Document new ACE_HAS_3_PARAM_WCSTOK macro.
+	* ace/OS_String.inl (strtok_r): Check ACE_HAS_3_PARAM_WCSTOK macro.
+
+	* ace/config-aix-4.x.h:
+	* ace/config-linux-common.h:
+	* ace/config-sunos5.7.h:
+	  Define ACE_HAS_3_PARAM_WCSTOK on these platforms after doing
+	  the appropriate checks.
+
 Sun Jun  2 15:34:41 UTC 2002  Don Hinton  <dhinton@ieee.org>
 
 	* ace/DLL.cpp:
